@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.4d
 ------------
 * Fixed a bug in the combat code that'd cause the fight against Layla to break.
+* Fixed a bug in the code that'd break Out of Combat abilities. First Aid/Heal should work again.
 
 --------------------------------------------
              PREVIOUS VERSIONS
